@@ -38,6 +38,18 @@ java {
     }
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(Test) {
+    jvmArgs += ['--enable-preview']
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += ['--enable-preview']
+}
+
 application {
     // Define the main class for the application.
     mainClass = 'ai.rpg.App'
